--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,21 @@ nav{
     background-color: #fff;
     text-align: center;
     max-width: 600px;
+    padding: 3rem;
+}
+
+nav ul{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    list-style: none;
+}
+
+nav ul li{
+    background-color: #2A324B;
+    padding: 1rem;
+    color:#fff;
+    font-weight: bold;
 }
