--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+html, body{
+    height: 100%;
+    margin:0;
+}
 body{
     background-color: #E1E5EE;
+    margin: 0;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
 }
 
 nav{
