--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,8 @@ body{
 
 nav{
     background-color: #fff;
-    text-align: center;
-    max-width: 600px;
-    padding: 3rem;
+    padding: 1rem;
+    margin-bottom: 2rem;
 }
 
 nav ul{
@@ -25,7 +24,7 @@ nav ul{
     justify-content: center;
     margin: 0;
     padding: 0;
-    justify-content: space-between;
+    gap: 1rem;
     list-style: none;
 }
 
@@ -35,3 +34,9 @@ nav ul li{
     color:#fff;
     font-weight: bold;
 }
+
+nav ul li:hover{
+    background-color: #fff;
+    color:#2A324B;
+}
+
