--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 }
 
 nav{
-    padding: 1rem;
+    width: 864px;
 }
 
 nav ul{
@@ -29,19 +29,20 @@ nav ul{
 nav ul li{
     background-color: #2A324B;
     padding: 1rem;
+    flex: 1;
     color:#fff;
     font-weight: bold;
 }
 
-nav ul li:hover{
+nav ul li.selected{
     background-color: #fff;
     color:#2A324B;
 }
 
-#content{
-    max-width: 600px;
-    text-align: center;
-    padding: 1rem;
-    background-color: #fff;
+article{
+    max-width: 800px;
     width: 100%;
+    height: 400px;
+    padding: 2rem;
+    background-color: #fff;
 }
