--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,800;1,800&display=swap');
 
 html, body{
     height: 100%;
     margin:0;
 }
+
 body{
     background-color: #E1E5EE;
     margin: 0;
@@ -11,6 +12,7 @@ body{
     justify-content:center;
     align-items: center;
     flex-direction: column;
+    font-family: "Roboto";
 }
 
 nav{
